04-service-mesh-istio/mxnavi-istio-yaml/bookinfo/mxnavi-demo-istio/bookinfo/bookinfo-all-to-v1.yaml
#告诉集群使用的版本
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
