04-service-mesh-istio/mxnavi-istio-yaml/bookinfo/mxnavi-demo-istio/bookinfo/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bootinfo
spec:
  rules:
  - host: bookinfo.demo-istio.mxnavi.com
    http:
      paths:
      - backend:
          serviceName: productpage
          servicePort: 9080
